fix portuguese error

--- a/00_extract_valid_stations.ipynb
+++ b/00_extract_valid_stations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extração dos dados das estações, e S4\n",
+    "# Extração dos dados das estações e S4\n",
     "___\n",
     "\n",
     "Os dados de estações e S4 estão organizados em um servidor postgresql rodando na minha maquina local. Para permitir a utilização por outros, este notebook, além de extrair os dados do postgresql vai gerar um csv, contendo as informações sobre as estações brutas. Assim, como um dataframes pandas, um por estação, comprimido usando o formatado xz, o que forneceu a extensão \"pkl.xz\".\n",
