add compression xz to the generate data series

--- a/03_extract_vtec_stations.ipynb
+++ b/03_extract_vtec_stations.ipynb
@@ -150,7 +150,7 @@
     "    df_series = extract_series_station_from_array(pd.read_pickle(abs_path), \n",
     "                                                  df_station.itertuples())\n",
     "    df_series.rolling(25, win_type='gaussian', center=True).mean(std=1.0)\n",
-    "    df_series.to_pickle(os.path.join(local_data, 'station_' + file))"
+    "    df_series.to_pickle(os.path.join(local_data, 'station_' + file), compression='xz')"
    ]
   }
  ],
