fix text at notebook 01_preprocessing_s4_data.ipynb

--- a/01_preprocessing_s4_data.ipynb
+++ b/01_preprocessing_s4_data.ipynb
@@ -73,7 +73,7 @@
     "Segue-se então como uma suavização do sinal, por meio de uma aplicação de uma média móvel centrada com pesos gaussianos. Note, uma vez que trata-se de uma m?dia centrada:\n",
     "\n",
     "\\begin{equation}\n",
-    "y_t = \\sum_{i=-n}^{+n}w_iy_{t+i}\\mbox{,}\n",
+    "y_t = \\sum_{i=-n}^{+n}w_iy_{t+i}\n",
     "\\end{equation}\n",
     "\n",
     "onde $n$  a srepresenta o tamanho da janela. A suavização definiada, assim, leva em conta pontos futuros, tornando-a inadequada para aplicações em tempo real, pontos no futuro não são conhecidos, e em previsões de séries temporais, a suavização adiciona contribuição do futuro aos dados."
