--- a/00_generate_vtec_dataframe.ipynb
+++ b/00_generate_vtec_dataframe.ipynb
@@ -80,8 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.02 s, sys: 5.07 s, total: 8.09 s\n",
-      "Wall time: 15min 31s\n"
+      "CPU times: user 1.62 s, sys: 2.82 s, total: 4.44 s\n",
+      "Wall time: 3min 41s\n"
      ]
     }
    ],
@@ -121,8 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.75 ms, sys: 922 µs, total: 5.68 ms\n",
-      "Wall time: 4.68 ms\n"
+      "CPU times: user 855 µs, sys: 1.18 ms, total: 2.04 ms\n",
+      "Wall time: 1.71 ms\n"
      ]
     }
    ],
@@ -216,18 +216,11 @@
    "source": [
     "data_series_tec.to_pickle(\"./data/data_series_tec.pkl.xz\", compression='xz')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dscience)",
+   "display_name": "Python (Data Science)",
    "language": "python",
    "name": "dscience"
   },
