add visualization of the end of the dataframe for vtec data

--- a/00_generate_vtec_dataframe.ipynb
+++ b/00_generate_vtec_dataframe.ipynb
@@ -210,6 +210,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_series_tec.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
