add visualization of the end of the dataframe for vtec data

--- a/00_generate_vtec_dataframe.ipynb
+++ b/00_generate_vtec_dataframe.ipynb
@@ -80,8 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.62 s, sys: 2.82 s, total: 4.44 s\n",
-      "Wall time: 3min 41s\n"
+      "CPU times: user 1.5 s, sys: 2.63 s, total: 4.12 s\n",
+      "Wall time: 2min 25s\n"
      ]
     }
    ],
@@ -121,8 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 855 µs, sys: 1.18 ms, total: 2.04 ms\n",
-      "Wall time: 1.71 ms\n"
+      "CPU times: user 889 µs, sys: 1.14 ms, total: 2.03 ms\n",
+      "Wall time: 1.66 ms\n"
      ]
     }
    ],
@@ -210,16 +210,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vtec</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time-index</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-02-28 23:10:00+00:00</th>\n",
+       "      <td>[[nan, nan, nan, nan, nan, nan, nan, nan, nan,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-28 23:20:00+00:00</th>\n",
+       "      <td>[[nan, nan, nan, nan, nan, nan, nan, nan, nan,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-28 23:30:00+00:00</th>\n",
+       "      <td>[[nan, nan, nan, nan, nan, nan, nan, nan, nan,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-28 23:40:00+00:00</th>\n",
+       "      <td>[[nan, nan, nan, nan, nan, nan, nan, nan, nan,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-28 23:50:00+00:00</th>\n",
+       "      <td>[[nan, nan, nan, nan, nan, nan, nan, nan, nan,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                        vtec\n",
+       "time-index                                                                  \n",
+       "2014-02-28 23:10:00+00:00  [[nan, nan, nan, nan, nan, nan, nan, nan, nan,...\n",
+       "2014-02-28 23:20:00+00:00  [[nan, nan, nan, nan, nan, nan, nan, nan, nan,...\n",
+       "2014-02-28 23:30:00+00:00  [[nan, nan, nan, nan, nan, nan, nan, nan, nan,...\n",
+       "2014-02-28 23:40:00+00:00  [[nan, nan, nan, nan, nan, nan, nan, nan, nan,...\n",
+       "2014-02-28 23:50:00+00:00  [[nan, nan, nan, nan, nan, nan, nan, nan, nan,..."
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_series_tec.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
