add variable local_data

--- a/00_extract_valid_stations.ipynb
+++ b/00_extract_valid_stations.ipynb
@@ -36,6 +36,8 @@
     "from itertools import chain\n",
     "from tqdm import tqdm\n",
     "\n",
+    "from utils import local_data\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -87,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "54it [00:00, 871.12it/s]\n"
+      "54it [00:00, 881.76it/s]\n"
      ]
     }
    ],
@@ -118,7 +120,7 @@
    "outputs": [],
    "source": [
     "df_station = df_station[~df_station['identificationstation'].isin(drop_aux)]\n",
-    "df_station.to_pickle(\"./data/df_station.pkl\")"
+    "df_station.to_pickle(os.path.join(local_data, 'df_station.pkl'))"
    ]
   },
   {
