--- a/00_extract_valid_stations.ipynb
+++ b/00_extract_valid_stations.ipynb
@@ -77,7 +77,7 @@
     "    df_station = pd.read_sql_query('select * from station;', con=conn)\n",
     "    df_station.to_csv(path)\n",
     "\n",
-    "df_station = df_station.drop(columns=[\"startoperation\", \"stopoperation\", \"alias\", \"network\"])    "
+    "df_station = df_station.drop(columns=[\"startoperation\", \"stopoperation\", \"alias\", \"network\", \"Unnamed: 0\"])    "
    ]
   },
   {
@@ -89,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "54it [00:00, 881.76it/s]\n"
+      "54it [00:00, 877.30it/s]\n"
      ]
     }
    ],
@@ -149,7 +149,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>identificationstation</th>\n",
        "      <th>height</th>\n",
        "      <th>latitude</th>\n",
@@ -164,7 +163,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>7</td>\n",
        "      <td>cpa</td>\n",
        "      <td>580.000</td>\n",
        "      <td>-22.410000</td>\n",
@@ -177,7 +175,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>8</td>\n",
        "      <td>28</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-3.100000</td>\n",
@@ -190,7 +187,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>9</td>\n",
        "      <td>20</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-20.497000</td>\n",
@@ -203,7 +199,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>10</td>\n",
        "      <td>32</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-20.497000</td>\n",
@@ -216,7 +211,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>11</td>\n",
        "      <td>nta</td>\n",
        "      <td>0.000</td>\n",
        "      <td>-5.836162</td>\n",
@@ -229,7 +223,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>12</td>\n",
        "      <td>sj2</td>\n",
        "      <td>593.440</td>\n",
        "      <td>-23.207600</td>\n",
@@ -242,7 +235,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>14</td>\n",
        "      <td>16</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.823000</td>\n",
@@ -255,7 +247,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>15</td>\n",
        "      <td>22</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.823000</td>\n",
@@ -268,7 +259,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>16</td>\n",
        "      <td>cub</td>\n",
        "      <td>278.000</td>\n",
        "      <td>-15.555200</td>\n",
@@ -281,7 +271,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>17</td>\n",
        "      <td>dou</td>\n",
        "      <td>756.120</td>\n",
        "      <td>-22.110000</td>\n",
@@ -294,7 +283,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>18</td>\n",
        "      <td>24</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-3.742000</td>\n",
@@ -307,7 +295,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>19</td>\n",
        "      <td>34</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.823000</td>\n",
@@ -320,7 +307,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>20</td>\n",
        "      <td>33</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.789000</td>\n",
@@ -333,7 +319,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>21</td>\n",
        "      <td>ios</td>\n",
        "      <td>0.000</td>\n",
        "      <td>-14.470000</td>\n",
@@ -346,7 +331,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>22</td>\n",
        "      <td>imp</td>\n",
        "      <td>134.720</td>\n",
        "      <td>-5.310000</td>\n",
@@ -359,7 +343,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>23</td>\n",
        "      <td>25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.318000</td>\n",
@@ -372,7 +355,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>24</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.823000</td>\n",
@@ -385,7 +367,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
-       "      <td>25</td>\n",
        "      <td>11</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.823000</td>\n",
@@ -398,7 +379,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>26</td>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-10.200000</td>\n",
@@ -411,7 +391,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
-       "      <td>27</td>\n",
        "      <td>pln</td>\n",
        "      <td>434.340</td>\n",
        "      <td>-9.230000</td>\n",
@@ -424,7 +403,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
-       "      <td>28</td>\n",
        "      <td>30</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-21.989000</td>\n",
@@ -437,7 +415,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>29</td>\n",
        "      <td>4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-30.071000</td>\n",
@@ -450,7 +427,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
-       "      <td>30</td>\n",
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.120000</td>\n",
@@ -463,7 +439,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
-       "      <td>31</td>\n",
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.120000</td>\n",
@@ -476,7 +451,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
-       "      <td>32</td>\n",
        "      <td>17</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.120000</td>\n",
@@ -489,7 +463,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
-       "      <td>33</td>\n",
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.120000</td>\n",
@@ -502,7 +475,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
-       "      <td>34</td>\n",
        "      <td>19</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-22.120000</td>\n",
@@ -515,7 +487,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
-       "      <td>36</td>\n",
        "      <td>8</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-23.207000</td>\n",
@@ -528,7 +499,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
-       "      <td>37</td>\n",
        "      <td>14</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-23.207000</td>\n",
@@ -541,7 +511,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
-       "      <td>39</td>\n",
        "      <td>29</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-2.574000</td>\n",
@@ -554,7 +523,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
-       "      <td>40</td>\n",
        "      <td>afl</td>\n",
        "      <td>267.000</td>\n",
        "      <td>-9.900000</td>\n",
@@ -567,7 +535,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
-       "      <td>41</td>\n",
        "      <td>31</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-9.870000</td>\n",
@@ -580,7 +547,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
-       "      <td>42</td>\n",
        "      <td>bhz</td>\n",
        "      <td>858.000</td>\n",
        "      <td>-19.868500</td>\n",
@@ -593,7 +559,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
-       "      <td>43</td>\n",
        "      <td>bov</td>\n",
        "      <td>69.180</td>\n",
        "      <td>2.833920</td>\n",
@@ -606,7 +571,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>47</th>\n",
-       "      <td>47</td>\n",
        "      <td>26</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-13.001000</td>\n",
@@ -619,7 +583,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>48</th>\n",
-       "      <td>48</td>\n",
        "      <td>tfe</td>\n",
        "      <td>0.057</td>\n",
        "      <td>-3.180000</td>\n",
@@ -632,7 +595,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>49</th>\n",
-       "      <td>49</td>\n",
        "      <td>bsa</td>\n",
        "      <td>1050.000</td>\n",
        "      <td>-15.764200</td>\n",
@@ -645,7 +607,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
-       "      <td>50</td>\n",
        "      <td>pvh</td>\n",
        "      <td>1130.000</td>\n",
        "      <td>-8.490000</td>\n",
@@ -658,7 +619,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51</th>\n",
-       "      <td>51</td>\n",
        "      <td>sta</td>\n",
        "      <td>110.100</td>\n",
        "      <td>-29.712591</td>\n",
@@ -671,7 +631,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52</th>\n",
-       "      <td>52</td>\n",
        "      <td>15</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-3.100000</td>\n",
@@ -687,47 +646,47 @@
        "</div>"
       ],
       "text/plain": [
-       "    Unnamed: 0 identificationstation    height   latitude  longitude state  \\\n",
-       "7            7                   cpa   580.000 -22.410000 -45.000000    sp   \n",
-       "8            8                    28       NaN  -3.100000 -59.976000    am   \n",
-       "9            9                    20       NaN -20.497000 -54.615000    ms   \n",
-       "10          10                    32       NaN -20.497000 -54.615000    ms   \n",
-       "11          11                   nta     0.000  -5.836162 -35.121000    rn   \n",
-       "12          12                   sj2   593.440 -23.207600 -45.859800    sp   \n",
-       "14          14                    16       NaN -22.823000 -43.238000    rj   \n",
-       "15          15                    22       NaN -22.823000 -43.238000    rj   \n",
-       "16          16                   cub   278.000 -15.555200 -56.069800    mt   \n",
-       "17          17                   dou   756.120 -22.110000 -54.550000    ms   \n",
-       "18          18                    24       NaN  -3.742000 -38.539000    ce   \n",
-       "19          19                    34       NaN -22.823000 -43.238000    rj   \n",
-       "20          20                    33       NaN -22.789000 -45.220000    sp   \n",
-       "21          21                   ios     0.000 -14.470000 -39.100000    ba   \n",
-       "22          22                   imp   134.720  -5.310000 -47.280000    ma   \n",
-       "23          23                    25       NaN -22.318000 -46.329000    mg   \n",
-       "24          24                     1       NaN -22.823000 -41.785700    rj   \n",
-       "25          25                    11       NaN -22.823000 -41.785700    rj   \n",
-       "26          26                     3       NaN -10.200000 -48.312000    ro   \n",
-       "27          27                   pln   434.340  -9.230000 -40.300000    pe   \n",
-       "28          28                    30       NaN -21.989000 -47.334000    sp   \n",
-       "29          29                     4       NaN -30.071000 -51.119000    rs   \n",
-       "30          30                     5       NaN -22.120000 -51.407000    sp   \n",
-       "31          31                     6       NaN -22.120000 -51.407000    sp   \n",
-       "32          32                    17       NaN -22.120000 -51.407000    sp   \n",
-       "33          33                    18       NaN -22.120000 -51.407000    sp   \n",
-       "34          34                    19       NaN -22.120000 -51.407000    sp   \n",
-       "36          36                     8       NaN -23.207000 -45.859000    sp   \n",
-       "37          37                    14       NaN -23.207000 -45.859000    sp   \n",
-       "39          39                    29       NaN  -2.574000 -44.209000    ma   \n",
-       "40          40                   afl   267.000  -9.900000 -55.900000    mt   \n",
-       "41          41                    31       NaN  -9.870000 -56.104000    mt   \n",
-       "42          42                   bhz   858.000 -19.868500 -43.954200    mg   \n",
-       "43          43                   bov    69.180   2.833920 -60.695380    rr   \n",
-       "47          47                    26       NaN -13.001000 -38.508000    ba   \n",
-       "48          48                   tfe     0.057  -3.180000 -64.440000    am   \n",
-       "49          49                   bsa  1050.000 -15.764200 -47.869400    df   \n",
-       "50          50                   pvh  1130.000  -8.490000 -63.550000    ro   \n",
-       "51          51                   sta   110.100 -29.712591 -53.717206    rs   \n",
-       "52          52                    15       NaN  -3.100000 -59.976000    am   \n",
+       "   identificationstation    height   latitude  longitude state  \\\n",
+       "7                    cpa   580.000 -22.410000 -45.000000    sp   \n",
+       "8                     28       NaN  -3.100000 -59.976000    am   \n",
+       "9                     20       NaN -20.497000 -54.615000    ms   \n",
+       "10                    32       NaN -20.497000 -54.615000    ms   \n",
+       "11                   nta     0.000  -5.836162 -35.121000    rn   \n",
+       "12                   sj2   593.440 -23.207600 -45.859800    sp   \n",
+       "14                    16       NaN -22.823000 -43.238000    rj   \n",
+       "15                    22       NaN -22.823000 -43.238000    rj   \n",
+       "16                   cub   278.000 -15.555200 -56.069800    mt   \n",
+       "17                   dou   756.120 -22.110000 -54.550000    ms   \n",
+       "18                    24       NaN  -3.742000 -38.539000    ce   \n",
+       "19                    34       NaN -22.823000 -43.238000    rj   \n",
+       "20                    33       NaN -22.789000 -45.220000    sp   \n",
+       "21                   ios     0.000 -14.470000 -39.100000    ba   \n",
+       "22                   imp   134.720  -5.310000 -47.280000    ma   \n",
+       "23                    25       NaN -22.318000 -46.329000    mg   \n",
+       "24                     1       NaN -22.823000 -41.785700    rj   \n",
+       "25                    11       NaN -22.823000 -41.785700    rj   \n",
+       "26                     3       NaN -10.200000 -48.312000    ro   \n",
+       "27                   pln   434.340  -9.230000 -40.300000    pe   \n",
+       "28                    30       NaN -21.989000 -47.334000    sp   \n",
+       "29                     4       NaN -30.071000 -51.119000    rs   \n",
+       "30                     5       NaN -22.120000 -51.407000    sp   \n",
+       "31                     6       NaN -22.120000 -51.407000    sp   \n",
+       "32                    17       NaN -22.120000 -51.407000    sp   \n",
+       "33                    18       NaN -22.120000 -51.407000    sp   \n",
+       "34                    19       NaN -22.120000 -51.407000    sp   \n",
+       "36                     8       NaN -23.207000 -45.859000    sp   \n",
+       "37                    14       NaN -23.207000 -45.859000    sp   \n",
+       "39                    29       NaN  -2.574000 -44.209000    ma   \n",
+       "40                   afl   267.000  -9.900000 -55.900000    mt   \n",
+       "41                    31       NaN  -9.870000 -56.104000    mt   \n",
+       "42                   bhz   858.000 -19.868500 -43.954200    mg   \n",
+       "43                   bov    69.180   2.833920 -60.695380    rr   \n",
+       "47                    26       NaN -13.001000 -38.508000    ba   \n",
+       "48                   tfe     0.057  -3.180000 -64.440000    am   \n",
+       "49                   bsa  1050.000 -15.764200 -47.869400    df   \n",
+       "50                   pvh  1130.000  -8.490000 -63.550000    ro   \n",
+       "51                   sta   110.100 -29.712591 -53.717206    rs   \n",
+       "52                    15       NaN  -3.100000 -59.976000    am   \n",
        "\n",
        "                                        city  city_heigh  city_latitude  \\\n",
        "7                         cachoeira paulista       545.0      -22.67370   \n",
