1. add new metrics to utils.py 2. updates the tests notebooks with new metrics 3. update the graphics

--- a/07_analise_sj2_svm.ipynb
+++ b/07_analise_sj2_svm.ipynb
@@ -214,13 +214,29 @@
       "O erro quadrático médio foi: 0.002478\n",
       "O erro quadrático total foi: 2.986976\n",
       "O maior erro por previsão foi: 0.265615\n",
-      "O erro relativo foi 21.239728%\n",
+      "O erro relativo foi: 21.239728%\n",
+      "O número de verdadeiros negativos foi: 1571\n",
+      "O número de verdadeiros positivos foi: 367\n",
+      "O número de falsos negativos foi: 10\n",
+      "O número de falsos positivos foi: 1652\n",
+      "O POD foi: 0.973475\n",
+      "O FAR foi: 0.818227\n",
+      "A ACC foi: 0.538333\n",
+      "O kappa foi: 0.047993\n",
       "\n",
       "Error for the time series sample:\n",
       "O erro quadrático médio foi: 0.007980\n",
       "O erro quadrático total foi: 2.320827\n",
       "O maior erro por previsão foi: 0.496674\n",
-      "O erro relativo foi 29.184886%\n"
+      "O erro relativo foi: 29.184886%\n",
+      "O número de verdadeiros negativos foi: 302\n",
+      "O número de verdadeiros positivos foi: 79\n",
+      "O número de falsos negativos foi: 5\n",
+      "O número de falsos positivos foi: 289\n",
+      "O POD foi: 0.940476\n",
+      "O FAR foi: 0.785326\n",
+      "A ACC foi: 0.564444\n",
+      "O kappa foi: 0.053423\n"
      ]
     },
     {
@@ -303,13 +319,29 @@
       "O erro quadrático médio foi: 0.002930\n",
       "O erro quadrático total foi: 3.247679\n",
       "O maior erro por previsão foi: 0.282451\n",
-      "O erro relativo foi 24.345703%\n",
+      "O erro relativo foi: 24.345703%\n",
+      "O número de verdadeiros negativos foi: 1410\n",
+      "O número de verdadeiros positivos foi: 368\n",
+      "O número de falsos negativos foi: 9\n",
+      "O número de falsos positivos foi: 1813\n",
+      "O POD foi: 0.976127\n",
+      "O FAR foi: 0.831270\n",
+      "A ACC foi: 0.493889\n",
+      "O kappa foi: 0.052459\n",
       "\n",
       "Error for the time series sample:\n",
       "O erro quadrático médio foi: 0.008617\n",
       "O erro quadrático total foi: 2.411770\n",
       "O maior erro por previsão foi: 0.482412\n",
-      "O erro relativo foi 34.353222%\n"
+      "O erro relativo foi: 34.353222%\n",
+      "O número de verdadeiros negativos foi: 183\n",
+      "O número de verdadeiros positivos foi: 79\n",
+      "O número de falsos negativos foi: 5\n",
+      "O número de falsos positivos foi: 408\n",
+      "O POD foi: 0.940476\n",
+      "O FAR foi: 0.837782\n",
+      "A ACC foi: 0.388148\n",
+      "O kappa foi: 0.072751\n"
      ]
     },
     {
@@ -389,13 +421,29 @@
       "O erro quadrático médio foi: 0.002830\n",
       "O erro quadrático total foi: 3.192083\n",
       "O maior erro por previsão foi: 0.297916\n",
-      "O erro relativo foi 23.381261%\n",
+      "O erro relativo foi: 23.381261%\n",
+      "O número de verdadeiros negativos foi: 1344\n",
+      "O número de verdadeiros positivos foi: 370\n",
+      "O número de falsos negativos foi: 7\n",
+      "O número de falsos positivos foi: 1879\n",
+      "O POD foi: 0.981432\n",
+      "O FAR foi: 0.835482\n",
+      "A ACC foi: 0.476111\n",
+      "O kappa foi: 0.054370\n",
       "\n",
       "Error for the time series sample:\n",
       "O erro quadrático médio foi: 0.008163\n",
       "O erro quadrático total foi: 2.347297\n",
       "O maior erro por previsão foi: 0.483314\n",
-      "O erro relativo foi 32.639945%\n"
+      "O erro relativo foi: 32.639945%\n",
+      "O número de verdadeiros negativos foi: 255\n",
+      "O número de verdadeiros positivos foi: 82\n",
+      "O número de falsos negativos foi: 2\n",
+      "O número de falsos positivos foi: 336\n",
+      "O POD foi: 0.976190\n",
+      "O FAR foi: 0.803828\n",
+      "A ACC foi: 0.499259\n",
+      "O kappa foi: 0.061590\n"
      ]
     },
     {
@@ -475,13 +523,29 @@
       "O erro quadrático médio foi: 0.002463\n",
       "O erro quadrático total foi: 2.977462\n",
       "O maior erro por previsão foi: 0.247152\n",
-      "O erro relativo foi 20.886832%\n",
+      "O erro relativo foi: 20.886832%\n",
+      "O número de verdadeiros negativos foi: 1770\n",
+      "O número de verdadeiros positivos foi: 371\n",
+      "O número de falsos negativos foi: 6\n",
+      "O número de falsos positivos foi: 1453\n",
+      "O POD foi: 0.984085\n",
+      "O FAR foi: 0.796601\n",
+      "A ACC foi: 0.594722\n",
+      "O kappa foi: 0.042414\n",
       "\n",
       "Error for the time series sample:\n",
       "O erro quadrático médio foi: 0.007821\n",
       "O erro quadrático total foi: 2.297643\n",
       "O maior erro por previsão foi: 0.455662\n",
-      "O erro relativo foi 30.214922%\n"
+      "O erro relativo foi: 30.214922%\n",
+      "O número de verdadeiros negativos foi: 314\n",
+      "O número de verdadeiros positivos foi: 83\n",
+      "O número de falsos negativos foi: 1\n",
+      "O número de falsos positivos foi: 277\n",
+      "O POD foi: 0.988095\n",
+      "O FAR foi: 0.769444\n",
+      "A ACC foi: 0.588148\n",
+      "O kappa foi: 0.051150\n"
      ]
     },
     {
@@ -561,13 +625,29 @@
       "O erro quadrático médio foi: 0.003029\n",
       "O erro quadrático total foi: 3.302160\n",
       "O maior erro por previsão foi: 0.316638\n",
-      "O erro relativo foi 24.742668%\n",
+      "O erro relativo foi: 24.742668%\n",
+      "O número de verdadeiros negativos foi: 1275\n",
+      "O número de verdadeiros positivos foi: 361\n",
+      "O número de falsos negativos foi: 16\n",
+      "O número de falsos positivos foi: 1948\n",
+      "O POD foi: 0.957560\n",
+      "O FAR foi: 0.843655\n",
+      "A ACC foi: 0.454444\n",
+      "O kappa foi: 0.055835\n",
       "\n",
       "Error for the time series sample:\n",
       "O erro quadrático médio foi: 0.008695\n",
       "O erro quadrático total foi: 2.422619\n",
       "O maior erro por previsão foi: 0.477766\n",
-      "O erro relativo foi 33.736594%\n"
+      "O erro relativo foi: 33.736594%\n",
+      "O número de verdadeiros negativos foi: 230\n",
+      "O número de verdadeiros positivos foi: 82\n",
+      "O número de falsos negativos foi: 2\n",
+      "O número de falsos positivos foi: 361\n",
+      "O POD foi: 0.976190\n",
+      "O FAR foi: 0.814898\n",
+      "A ACC foi: 0.462222\n",
+      "O kappa foi: 0.065980\n"
      ]
     },
     {
@@ -647,13 +727,29 @@
       "O erro quadrático médio foi: 0.002639\n",
       "O erro quadrático total foi: 3.082379\n",
       "O maior erro por previsão foi: 0.366675\n",
-      "O erro relativo foi 22.290286%\n",
+      "O erro relativo foi: 22.290286%\n",
+      "O número de verdadeiros negativos foi: 1275\n",
+      "O número de verdadeiros positivos foi: 358\n",
+      "O número de falsos negativos foi: 19\n",
+      "O número de falsos positivos foi: 1948\n",
+      "O POD foi: 0.949602\n",
+      "O FAR foi: 0.844753\n",
+      "A ACC foi: 0.453611\n",
+      "O kappa foi: 0.055680\n",
       "\n",
       "Error for the time series sample:\n",
       "O erro quadrático médio foi: 0.008195\n",
       "O erro quadrático total foi: 2.351981\n",
       "O maior erro por previsão foi: 0.473018\n",
-      "O erro relativo foi 29.758740%\n"
+      "O erro relativo foi: 29.758740%\n",
+      "O número de verdadeiros negativos foi: 296\n",
+      "O número de verdadeiros positivos foi: 80\n",
+      "O número de falsos negativos foi: 4\n",
+      "O número de falsos positivos foi: 295\n",
+      "O POD foi: 0.952381\n",
+      "O FAR foi: 0.786667\n",
+      "A ACC foi: 0.557037\n",
+      "O kappa foi: 0.054396\n"
      ]
     },
     {
@@ -733,13 +829,29 @@
       "O erro quadrático médio foi: 0.002894\n",
       "O erro quadrático total foi: 3.227811\n",
       "O maior erro por previsão foi: 0.276437\n",
-      "O erro relativo foi 23.046470%\n",
+      "O erro relativo foi: 23.046470%\n",
+      "O número de verdadeiros negativos foi: 1164\n",
+      "O número de verdadeiros positivos foi: 370\n",
+      "O número de falsos negativos foi: 7\n",
+      "O número de falsos positivos foi: 2059\n",
+      "O POD foi: 0.981432\n",
+      "O FAR foi: 0.847674\n",
+      "A ACC foi: 0.426111\n",
+      "O kappa foi: 0.059412\n",
       "\n",
       "Error for the time series sample:\n",
       "O erro quadrático médio foi: 0.009123\n",
       "O erro quadrático total foi: 2.481509\n",
       "O maior erro por previsão foi: 0.553862\n",
-      "O erro relativo foi 34.385721%\n"
+      "O erro relativo foi: 34.385721%\n",
+      "O número de verdadeiros negativos foi: 179\n",
+      "O número de verdadeiros positivos foi: 80\n",
+      "O número de falsos negativos foi: 4\n",
+      "O número de falsos positivos foi: 412\n",
+      "O POD foi: 0.952381\n",
+      "O FAR foi: 0.837398\n",
+      "A ACC foi: 0.383704\n",
+      "O kappa foi: 0.073912\n"
      ]
     },
     {
@@ -819,13 +931,29 @@
       "O erro quadrático médio foi: 0.002721\n",
       "O erro quadrático total foi: 3.130000\n",
       "O maior erro por previsão foi: 0.253909\n",
-      "O erro relativo foi 22.909347%\n",
+      "O erro relativo foi: 22.909347%\n",
+      "O número de verdadeiros negativos foi: 1487\n",
+      "O número de verdadeiros positivos foi: 367\n",
+      "O número de falsos negativos foi: 10\n",
+      "O número de falsos positivos foi: 1736\n",
+      "O POD foi: 0.973475\n",
+      "O FAR foi: 0.825487\n",
+      "A ACC foi: 0.515000\n",
+      "O kappa foi: 0.050307\n",
       "\n",
       "Error for the time series sample:\n",
       "O erro quadrático médio foi: 0.007669\n",
       "O erro quadrático total foi: 2.275202\n",
       "O maior erro por previsão foi: 0.479197\n",
-      "O erro relativo foi 29.547460%\n"
+      "O erro relativo foi: 29.547460%\n",
+      "O número de verdadeiros negativos foi: 312\n",
+      "O número de verdadeiros positivos foi: 82\n",
+      "O número de falsos negativos foi: 2\n",
+      "O número de falsos positivos foi: 279\n",
+      "O POD foi: 0.976190\n",
+      "O FAR foi: 0.772853\n",
+      "A ACC foi: 0.583704\n",
+      "O kappa foi: 0.051582\n"
      ]
     },
     {
