--- a/08_plots_one_vs_one.ipynb
+++ b/08_plots_one_vs_one.ipynb
@@ -322,7 +322,7 @@
     "plot_sunrise_and_sunset('sj2', df[a:b], ax)\n",
     "\n",
     "fig.tight_layout()\n",
-    "plt.show()"
+    "plt.savefig('./images/vtec_and_vtec_dt.eps', dpi=1000, format='eps')"
    ]
   }
  ],
