update 09_analise_all* notebooks to improve conversation and execution of pyhton version

--- a/09_analise_all.ipynb
+++ b/09_analise_all.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "from utils import location_station, find_set_sunrise, find_set_sunset\n",
     "\n",
-    "%matplotlib inline\n",
+    "#%matplotlib inline\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "latter_size = 14\n",
@@ -153,7 +153,7 @@
     "        if param_grid is not None:\n",
     "            if idx != 0:\n",
     "                file.write('\\n')\n",
-    "            file.write(idx+' -> '+i.name+'\\n')\n",
+    "            file.write(str(idx)+' -> '+i.name+'\\n')\n",
     "        dict_error = generate_and_avaliate_model(df=df,\n",
     "                                                instances_set=list(i.set),\n",
     "                                                target='s4',\n",
